apply review feebdback and fix css linter

--- a/src/PrestaShopBundle/Resources/views/Admin/Sell/Catalog/Product/Combination/paginated_list.html.twig
+++ b/src/PrestaShopBundle/Resources/views/Admin/Sell/Catalog/Product/Combination/paginated_list.html.twig
@@ -29,8 +29,8 @@
     {{ include('@PrestaShop/Admin/Sell/Catalog/Product/Combination/paginated_list_header.html.twig', {
       'productId': productId,
       'isMultistoreActive': isMultistoreActive,
-      'contextShopName': contextShopName,
-      'contextShopId': contextShopId,
+      'shopName': shopName,
+      'shopId': shopId,
     }) }}
 
     <div class="justify-content-center" id="combinations-list">
