Creation and Deletion handled by legacy

--- a/src/PrestaShopBundle/Resources/views/Admin/Configure/ShopParameters/CustomerSettings/Groups/index.html.twig
+++ b/src/PrestaShopBundle/Resources/views/Admin/Configure/ShopParameters/CustomerSettings/Groups/index.html.twig
@@ -27,7 +27,7 @@
 
 {% set layoutHeaderToolbarBtn = {
   add: {
-    href: '#',
+    href: path('admin_customer_groups_create'),
     desc: 'Add new group'|trans({}, 'Admin.Shopparameters.Feature'),
     icon: 'add_circle_outline',
   }
