add shopId in js and some todos as nothing seems to be working

--- a/src/PrestaShopBundle/Resources/views/Admin/Sell/Catalog/Product/FormTheme/product.html.twig
+++ b/src/PrestaShopBundle/Resources/views/Admin/Sell/Catalog/Product/FormTheme/product.html.twig
@@ -32,6 +32,7 @@
     'data-translations': translations|json_encode,
     'data-locales': locales|json_encode,
     'data-product-id': product_id,
+    'data-shop-id': shop_id,
     'data-form-name': update_form_name,
     'data-token': csrf_token(update_form_name)
   }) %}
