--- a/src/PrestaShopBundle/Resources/views/Admin/Sell/Order/Order/Blocks/View/customer.html.twig
+++ b/src/PrestaShopBundle/Resources/views/Admin/Sell/Order/Order/Blocks/View/customer.html.twig
@@ -171,11 +171,13 @@
               </a>
 
               <div class="dropdown-menu dropdown-menu-right">
-                <a class="dropdown-item" id="js-invoice-address-edit-btn"
-                   href="{{ path('admin_order_addresses_edit', {'orderId': orderForViewing.id, 'addressType': 'invoice', 'liteDisplaying': 1, 'submitFormAjax': 1}) }}"
-                >
-                  {{ 'Edit existing address'|trans({}, 'Admin.Actions') }}
-                </a>
+                {% if orderForViewing.invoiceAddress is not null %}
+                  <a class="dropdown-item" id="js-invoice-address-edit-btn"
+                     href="{{ path('admin_order_addresses_edit', {'orderId': orderForViewing.id, 'addressType': 'invoice', 'liteDisplaying': 1, 'submitFormAjax': 1}) }}"
+                  >
+                    {{ 'Edit existing address'|trans({}, 'Admin.Actions') }}
+                  </a>
+                {% endif %}
 
                 <a href="#"
                    class="dropdown-item js-update-customer-address-modal-btn"
