add apply to all shops checkbox and fix saving. Need to fix background flickering styles on hover

--- a/src/PrestaShopBundle/Resources/views/Admin/Sell/Catalog/Product/FormTheme/product.html.twig
+++ b/src/PrestaShopBundle/Resources/views/Admin/Sell/Catalog/Product/FormTheme/product.html.twig
@@ -33,6 +33,7 @@
     'data-locales': locales|json_encode,
     'data-product-id': product_id,
     'data-shop-id': shop_id,
+    'data-is-multi-store-active': is_multi_store_active,
     'data-form-name': update_form_name,
     'data-token': csrf_token(update_form_name)
   }) %}
