--- a/src/PrestaShopBundle/Resources/views/Admin/Sell/Catalog/Product/edit.html.twig
+++ b/src/PrestaShopBundle/Resources/views/Admin/Sell/Catalog/Product/edit.html.twig
@@ -38,6 +38,7 @@
   {% set productType = productForm.vars.product_type %}
   {% set productId = productForm.vars.product_id %}
   {% set shopId = productForm.vars.shop_id %}
+  {% set shopId = productForm.vars.shop_id %}
 
   <div class="header-toolbar d-print-none">
     {{ multistoreProductHeader(productId) }}
