Improve customer view totals

--- a/src/PrestaShopBundle/Resources/views/Admin/Sell/Customer/Blocks/View/carts.html.twig
+++ b/src/PrestaShopBundle/Resources/views/Admin/Sell/Customer/Blocks/View/carts.html.twig
@@ -37,7 +37,7 @@
             <th>{{ 'ID'|trans({}, 'Admin.Global') }}</th>
             <th>{{ 'Date'|trans({}, 'Admin.Global') }}</th>
             <th>{{ 'Carrier'|trans({}, 'Admin.Global') }}</th>
-            <th>{{ 'Total'|trans({}, 'Admin.Global') }}</th>
+            <th>{{ 'Total (Tax incl.)'|trans({}, 'Admin.Orderscustomers.Feature') }}</th>
             <th class="text-right">{{ 'Actions'|trans({}, 'Admin.Global') }}</th>
           </tr>
         </thead>
