--- a/src/PrestaShopBundle/Resources/views/Admin/Sell/Customer/Blocks/View/orders.html.twig
+++ b/src/PrestaShopBundle/Resources/views/Admin/Sell/Customer/Blocks/View/orders.html.twig
@@ -61,7 +61,7 @@
               <th>{{ 'Payment'|trans({}, 'Admin.Global') }}</th>
               <th>{{ 'Status'|trans({}, 'Admin.Global') }}</th>
               <th>{{ 'Products'|trans({}, 'Admin.Global') }}</th>
-              <th>{{ 'Total spent'|trans({}, 'Admin.Orderscustomers.Feature') }}</th>
+              <th>{{ 'Total (Tax incl.)'|trans({}, 'Admin.Orderscustomers.Feature') }}</th>
               <th class="text-right">{{ 'Actions'|trans({}, 'Admin.Global') }}</th>
             </tr>
           </thead>
@@ -101,7 +101,7 @@
               <th>{{ 'Payment'|trans({}, 'Admin.Global') }}</th>
               <th>{{ 'Status'|trans({}, 'Admin.Global') }}</th>
               <th>{{ 'Products'|trans({}, 'Admin.Global') }}</th>
-              <th>{{ 'Total spent'|trans({}, 'Admin.Orderscustomers.Feature') }}</th>
+              <th>{{ 'Total (Tax incl.)'|trans({}, 'Admin.Orderscustomers.Feature') }}</th>
               <th class="text-right">{{ 'Actions'|trans({}, 'Admin.Global') }}</th>
             </tr>
           </thead>
