Correctly handle toggle column in single shop context

--- a/src/PrestaShopBundle/Resources/views/Admin/Common/Grid/Columns/Content/empty.html.twig
+++ b/src/PrestaShopBundle/Resources/views/Admin/Common/Grid/Columns/Content/empty.html.twig
@@ -24,3 +24,4 @@
  *#}
 
 {# Empty column which displays nothing, mainly used when changing the content of a grid a replacing one column with empty content. #}
+{{ column.options.empty_value|default('') }}
