Adding raw option to data column
# Conflicts:
#	src/Core/Grid/Column/Type/DataColumn.php
#	src/PrestaShopBundle/Resources/views/Admin/Common/Grid/Columns/Content/data.html.twig

# Conflicts:
#	src/Core/Grid/Column/Type/DataColumn.php

--- a/src/PrestaShopBundle/Resources/views/Admin/Common/Grid/Columns/Content/data.html.twig
+++ b/src/PrestaShopBundle/Resources/views/Admin/Common/Grid/Columns/Content/data.html.twig
@@ -24,7 +24,15 @@
  *#}
 
 {% if column.options.max_displayed_characters > 0 and record[column.options.field]|length > column.options.max_displayed_characters %}
-  {{ record[column.options.field]|slice(0, column.options.max_displayed_characters) }}&mldr;
+  {% if column.options.raw %}
+    {{ record[column.options.field]|slice(0, column.options.max_displayed_characters)|escape('html') }}&mldr;
+  {% else %}
+    {{ record[column.options.field]|slice(0, column.options.max_displayed_characters) }}&mldr;
+  {% endif %}
 {% else %}
-  {{ record[column.options.field] }}
+  {% if column.options.raw %}
+    {{ record[column.options.field]|escape('html') }}
+  {% else %}
+    {{ record[column.options.field] }}
+  {% endif %}
 {% endif %}
