do not show allShops checkbox when multistore is off and fix prop naming

--- a/src/PrestaShopBundle/Resources/views/Admin/Sell/Catalog/Product/FormTheme/product.html.twig
+++ b/src/PrestaShopBundle/Resources/views/Admin/Sell/Catalog/Product/FormTheme/product.html.twig
@@ -41,8 +41,7 @@
   {% if form.shop_images is defined %}
     {{ form_row(form.shop_images) }}
   {% endif %}
-  <div {{ block('widget_attributes') }}>
-  </div>
+  <div {{ block('widget_attributes') }}></div>
 {% endblock %}
 
 {% block related_product_row %}
