--- a/src/PrestaShopBundle/Resources/views/Admin/Sell/Order/Order/preview.html.twig
+++ b/src/PrestaShopBundle/Resources/views/Admin/Sell/Order/Order/preview.html.twig
@@ -143,7 +143,7 @@
                 {% if productDetail.id %}
                   <a class="px-0 external-link" href="{{ path('admin_product_form', {'id': productDetail.id}) }}" target="_blank">{{ productDetail.name }}</a>
                 {% else %}
-                  {{ productDetail.name }} ({{ 'Product deleted'|trans({}, 'Admin.Global') }})
+                  {{ productDetail.name }} ({{ 'Product deleted'|trans({}, 'Admin.Catalog.Feature') }})
                 {% endif %}
               </td>
               <td class="p-1">{{ productDetail.reference }}</td>
