dynamically update summary quantity on combination list refresh

--- a/src/PrestaShopBundle/Resources/views/Admin/Sell/Catalog/Product/Blocks/header-details.html.twig
+++ b/src/PrestaShopBundle/Resources/views/Admin/Sell/Catalog/Product/Blocks/header-details.html.twig
@@ -87,7 +87,7 @@
       {% endif %}
 
       <div class="product-field-preview" data-role="quantity">
-        <div class="product-field-value {{ stockClass }}">
+        <div class="product-total-quantity product-field-value {{ stockClass }}">
           {{ quantityData }}
         </div>
         <div class="product-field-label">
