add handling visuals (class and label change) depending on stock

--- a/src/PrestaShopBundle/Resources/views/Admin/Sell/Catalog/Product/Blocks/header-details.html.twig
+++ b/src/PrestaShopBundle/Resources/views/Admin/Sell/Catalog/Product/Blocks/header-details.html.twig
@@ -75,22 +75,34 @@
         {% set lowStock = 0 %}
       {% endif %}
 
+      {% set outOfStockLabel = 'out of stock'|trans({}, 'Admin.Catalog.Feature') %}
+      {% set lowStockLabel = 'low stock'|trans({}, 'Admin.Catalog.Feature') %}
+      {% set inStockLabel = 'in stock'|trans({}, 'Admin.Catalog.Feature') %}
+
       {% if quantityData <= 0 %}
         {% set stockClass = 'danger' %}
-        {% set stockLabel = 'out of stock'|trans({}, 'Admin.Catalog.Feature') %}
+        {% set stockLabel = outOfStockLabel %}
       {% elseif lowStock > 0 and quantityData <= lowStock %}
         {% set stockClass = 'warning' %}
-        {% set stockLabel = 'low stock'|trans({}, 'Admin.Catalog.Feature') %}
+        {% set stockLabel = lowStockLabel %}
       {% else %}
         {% set stockClass = 'success' %}
-        {% set stockLabel = 'in stock'|trans({}, 'Admin.Catalog.Feature') %}
+        {% set stockLabel = inStockLabel %}
       {% endif %}
 
-      <div class="product-field-preview" data-role="quantity">
+      <div
+        class="product-field-preview"
+        data-role="quantity"
+        {# these data attributes are needed for dynamic quantity update in javascript side #}
+        data-low-stock-threshold="{{ lowStock }}"
+        data-out-of-stock-label="{{ outOfStockLabel }}"
+        data-low-stock-label="{{ lowStockLabel }}"
+        data-in-stock-label="{{ inStockLabel }}"
+      >
         <div class="product-total-quantity product-field-value {{ stockClass }}">
           {{ quantityData }}
         </div>
-        <div class="product-field-label">
+        <div class="product-field-label product-total-quantity-label">
           {{ stockLabel }}
         </div>
       </div>
