Batch of corrections

--- a/src/PrestaShopBundle/Resources/views/Admin/Configure/AdvancedParameters/RequestSql/view.html.twig
+++ b/src/PrestaShopBundle/Resources/views/Admin/Configure/AdvancedParameters/RequestSql/view.html.twig
@@ -30,7 +30,7 @@
     <div class="card">
       <h3 class="card-header">
         <i class="material-icons">list</i>
-        {{ 'SQL query result'|trans }} ({{ sqlRequestResult.rows|length }})
+        {{ 'SQL query results'|trans }} ({{ sqlRequestResult.rows|length }})
       </h3>
       <div class="card-body">
         {% if sqlRequestResult.rows is not empty %}
