--- a/src/PrestaShopBundle/Resources/views/Admin/Improve/Design/Cms/Blocks/category_form.html.twig
+++ b/src/PrestaShopBundle/Resources/views/Admin/Improve/Design/Cms/Blocks/category_form.html.twig
@@ -30,7 +30,7 @@
 
   <div class="card">
     <h3 class="card-header">
-      {{ 'CMS Category'|trans({}, 'Admin.Design.Feature') }}
+      {{ 'Category'|trans({}, 'Admin.Design.Feature') }}
     </h3>
     <div class="card-body">
       <div class="form-wrapper">
