--- a/src/PrestaShopBundle/Resources/views/Admin/Sell/CustomerService/CustomerThread/view.html.twig
+++ b/src/PrestaShopBundle/Resources/views/Admin/Sell/CustomerService/CustomerThread/view.html.twig
@@ -27,8 +27,7 @@
 {% block content %}
   <div class="card" data-role="messages-thread">
     <h3 class="card-header">
-      {{ 'Customer thread'|trans({}, 'Admin.Orderscustomers.Feature') }}
-      <strong>#{{ customerThreadView.customerThreadId.value }}</strong>
+      {{ 'Customer thread #%id%'|trans({'%id%': customerThreadView.customerThreadId.value}, 'Admin.Orderscustomers.Feature') }}
     </h3>
     <div class="card-body">
       {% block customer_thread_actions %}
