--- a/src/PrestaShopBundle/Resources/views/Admin/Configure/ShopParameters/OrderStates/index.html.twig
+++ b/src/PrestaShopBundle/Resources/views/Admin/Configure/ShopParameters/OrderStates/index.html.twig
@@ -31,7 +31,7 @@
   },
   'add_return_state': {
     'href': path('admin_order_return_states_create'),
-    'desc': 'Add new order return status'|trans({}, 'Admin.Shopparameters.Feature'),
+    'desc': 'Add new return status'|trans({}, 'Admin.Shopparameters.Feature'),
     'icon': 'add_circle_outline'
   }
 } %}
