--- a/src/PrestaShopBundle/Resources/views/Admin/Improve/Design/Theme/import.html.twig
+++ b/src/PrestaShopBundle/Resources/views/Admin/Improve/Design/Theme/import.html.twig
@@ -28,7 +28,7 @@
   'add': {
     'href': path('admin_themes_import'),
     'desc': 'Add new theme'|trans({}, 'Admin.Design.Feature'),
-    'icon': 'add'
+    'icon': 'add_circle_outline'
   },
   'export': {
     'href': path('admin_themes_export_current'),
