--- a/src/PrestaShopBundle/Resources/views/Admin/Configure/ShopParameters/CustomerSettings/Title/Blocks/form.html.twig
+++ b/src/PrestaShopBundle/Resources/views/Admin/Configure/ShopParameters/CustomerSettings/Title/Blocks/form.html.twig
@@ -38,7 +38,7 @@
         </div>
       </div>
       <div class="card-footer">
-        <a href="{{ path('admin_contacts_index') }}" class="btn btn-outline-secondary">
+        <a href="{{ path('admin_title_index') }}" class="btn btn-outline-secondary">
           {{ 'Cancel'|trans({}, 'Admin.Actions') }}
         </a>
         <button class="btn btn-primary float-right" id="save-button">
