fix clear filters multi translation

--- a/src/PrestaShopBundle/Resources/views/Admin/Sell/Catalog/Product/Combination/paginated_list_header.html.twig
+++ b/src/PrestaShopBundle/Resources/views/Admin/Sell/Catalog/Product/Combination/paginated_list_header.html.twig
@@ -107,7 +107,7 @@
 <div id="combinations_filters"
   data-translations="{{ {
    'filters.label': 'Filter by:'|trans({}, 'Admin.Actions'),
-   'filters.clear': 'Clear filter|Clear %filtersNb% filters'|trans({}, 'Admin.Actions'),
+   'filters.clear': 'Clear filter|Clear {filtersNb} filters'|trans({}, 'Admin.Actions'),
   }|json_encode }}"
 ></div>
 <div id="combination-edit-modal"
