--- a/src/PrestaShopBundle/Resources/views/Admin/Sell/Catalog/Categories/Blocks/thumbnail_image.html.twig
+++ b/src/PrestaShopBundle/Resources/views/Admin/Sell/Catalog/Categories/Blocks/thumbnail_image.html.twig
@@ -24,11 +24,11 @@
  *#}
 
 {% block category_thumbnail_image %}
-  {% if thumbnailImage is defined and thumbnailImage is not null %}
+  {% if preview_image is defined and preview_image is not null %}
     <div>
       <figure class="figure">
-        <img src="{{ thumbnailImage.path }}" class="figure-img img-fluid img-thumbnail">
-        <figcaption class="figure-caption">{{ 'File size'|trans({}, 'Admin.Advparameters.Feature') }} {{ thumbnailImage.size }}</figcaption>
+        <img src="{{ preview_image.path }}" class="figure-img img-fluid img-thumbnail">
+        <figcaption class="figure-caption">{{ 'File size'|trans({}, 'Admin.Advparameters.Feature') }} {{ preview_image.size }}</figcaption>
       </figure>
     </div>
   {% endif %}
