--- a/src/PrestaShopBundle/Resources/views/Admin/Configure/ShopParameters/CustomerSettings/Title/Blocks/form.html.twig
+++ b/src/PrestaShopBundle/Resources/views/Admin/Configure/ShopParameters/CustomerSettings/Title/Blocks/form.html.twig
@@ -30,7 +30,7 @@
     <div class="card">
       <h3 class="card-header">
         <i class="material-icons">man</i>
-        {{ 'Social titles'|trans({}, 'Admin.Shopparameters.Feature') }}
+        {{ 'Titles'|trans({}, 'Admin.Shopparameters.Feature') }}
       </h3>
       <div class="card-body">
         <div class="form-wrapper">
