Address feedback and unify grid names

--- a/src/PrestaShopBundle/Resources/views/Admin/Configure/ShopParameters/TrafficSeo/Meta/Blocks/form.html.twig
+++ b/src/PrestaShopBundle/Resources/views/Admin/Configure/ShopParameters/TrafficSeo/Meta/Blocks/form.html.twig
@@ -28,7 +28,7 @@
 {{ form_start(metaForm) }}
   <div class="card">
     <h3 class="card-header">
-      {{ 'Page configuration'|trans({}, 'Admin.Shopparameters.Feature') }}
+      {{ 'Meta configuration'|trans({}, 'Admin.Shopparameters.Feature') }}
     </h3>
     <div class="card-body">
       <div class="form-wrapper">
