corrects some CORE wordings

--- a/src/PrestaShopBundle/Resources/views/Admin/Multistore/header.html.twig
+++ b/src/PrestaShopBundle/Resources/views/Admin/Multistore/header.html.twig
@@ -64,7 +64,7 @@
             {% if lockedToAllShopContext == false %}
             <div class="multishop-modal-search-container">
               <i class="material-icons">search</i>
-              <input type="text" class="form-control multishop-modal-search js-multishop-modal-search" placeholder="{{ 'Search shop name'|trans({}, 'Admin.Navigation.Header') }}" data-no-results="{{ "No results found for"|trans({}, 'Admin.Global') }}" data-searching="{{ "Searching for"|trans({}, 'Admin.Global') }}">
+              <input type="text" class="form-control multishop-modal-search js-multishop-modal-search" placeholder="{{ 'Search store name'|trans({}, 'Admin.Navigation.Header') }}" data-no-results="{{ "No results found for"|trans({}, 'Admin.Global') }}" data-searching="{{ "Searching for"|trans({}, 'Admin.Global') }}">
             </div>
             {% endif %}
             {% endblock %}
