--- a/src/PrestaShopBundle/Resources/views/Admin/Multistore/product_header.html.twig
+++ b/src/PrestaShopBundle/Resources/views/Admin/Multistore/product_header.html.twig
@@ -27,7 +27,7 @@
 
 {% block multishop_header_right %}
   <a class="header-multishop-view-action product-shops-action" href="{{ url('admin_products_select_shops', {productId: productId}) }}" target="_blank" rel="nofollow">
-    {{ "Select shops"|trans({}, 'Admin.Navigation.Header') }}
+    {{ "Select stores"|trans({}, 'Admin.Navigation.Header') }}
     {% include '@PrestaShop/Admin/Multistore/shop_icon.html.twig' %}
   </a>
   {{ parent() }}
