--- a/src/PrestaShopBundle/Resources/views/Admin/Sell/Catalog/Categories/Blocks/form.html.twig
+++ b/src/PrestaShopBundle/Resources/views/Admin/Sell/Catalog/Categories/Blocks/form.html.twig
@@ -203,7 +203,7 @@
       {% if categoryForm.shop_association is defined %}
         <div class="form-group row">
           <label class="form-control-label">
-            {{ 'Shop association'|trans({}, 'Admin.Global') }}
+            {{ 'Store association'|trans({}, 'Admin.Global') }}
           </label>
           <div class="col-sm">
             {{ form_widget(categoryForm.shop_association) }}
