--- a/src/PrestaShopBundle/Resources/views/Admin/Sell/CustomerService/CustomerThread/index.html.twig
+++ b/src/PrestaShopBundle/Resources/views/Admin/Sell/CustomerService/CustomerThread/index.html.twig
@@ -32,7 +32,7 @@
   {% block orders_kpi %}
     {{ render(controller(
       'PrestaShopBundle:Admin\\Common:renderKpiRow',
-      { 'kpiRow': customerThreadKpi }
+      { 'kpiRow': customerThreadKpiRow }
     )) }}
   {% endblock %}
 
